syntax = "proto3";

package meatcounter;

// Specify the Go package where the generated code will be placed.
option go_package = "cmd/meat_counter_api/meatcounter";

service MeatCounter {
  rpc GetMeats (GetMeatsRequest) returns (GetMeatsResponse);
}

message GetMeatsRequest {}

message GetMeatsResponse {
  map<string, int32> beef = 1;
}